<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context="com.example.android.snookerapp.MainActivity">

    <TextView
        android:id="@+id/info"
        style="@style/info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player_one" />

            <TextView
                android:id="@+id/player_1_score"
                style="@style/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_score" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/grid_margin">

                <Button
                    android:id="@+id/one1"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:background="@drawable/red_selector"
                    android:onClick="addOnePlayerOne"
                    android:enabled="false"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/one2"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:background="@drawable/yellow_selector"
                    android:onClick="addTwoPlayerOne"
                    android:enabled="false"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/one3"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="@drawable/green_selector"
                    android:onClick="addThreePlayerOne"
                    android:enabled="false"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/one4"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:background="@drawable/brown_selector"
                    android:onClick="addFourPlayerOne"
                    android:enabled="false"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/one5"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:background="@drawable/blue_selector"
                    android:onClick="addFivePlayerOne"
                    android:enabled="false"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/one6"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:background="@drawable/pink_selector"
                    android:onClick="addSixPlayerOne"
                    android:enabled="false"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/one7"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="@drawable/black_selector"
                    android:onClick="addSevenPlayerOne"
                    android:enabled="false"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/one_miss"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:background="@drawable/white_selector"
                    android:enabled="false"
                    android:text="@string/miss" />

                <Button
                    android:id="@+id/new_game"
                    style="@style/game_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/game_button_height"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="4"
                    android:background="@drawable/button_selector"
                    android:enabled="true"
                    android:text="@string/new_game" />

            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player_two" />

            <TextView
                android:id="@+id/player_2_score"
                style="@style/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_score" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/grid_margin">

                <Button
                    android:id="@+id/two1"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:background="@drawable/red_selector"
                    android:enabled="false"
                    android:onClick="addOnePlayerTwo"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/two2"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:background="@drawable/yellow_selector"
                    android:enabled="false"
                    android:onClick="addTwoPlayerTwo"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/two3"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="@drawable/green_selector"
                    android:enabled="false"
                    android:onClick="addThreePlayerTwo"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/two4"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:background="@drawable/brown_selector"
                    android:enabled="false"
                    android:onClick="addFourPlayerTwo"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/two5"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:background="@drawable/blue_selector"
                    android:enabled="false"
                    android:onClick="addFivePlayerTwo"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/two6"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:background="@drawable/pink_selector"
                    android:enabled="false"
                    android:onClick="addSixPlayerTwo"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/two7"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="@drawable/black_selector"
                    android:enabled="false"
                    android:onClick="addSevenPlayerTwo"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/two_miss"
                    style="@style/ball_buttons"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:background="@drawable/white_selector"
                    android:enabled="false"
                    android:text="@string/miss" />

                <Button
                    android:id="@+id/finish_game"
                    style="@style/game_buttons_grayscale"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/game_button_height"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:layout_row="4"
                    android:background="@drawable/button_selector"
                    android:enabled="false"
                    android:text="@string/finish" />

            </GridLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
